<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <Button
            android:id="@+id/test_grid_view_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid_view" />

        <Button
            android:id="@+id/test_recycler_grid_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_grid"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/test_query_mobile_phone_number_attribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_query_mobile_phone_number_attribution"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/ding_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_ding"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/test_v_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_v_layout"
            android:textAllCaps="false" />]

        <Button
            android:id="@+id/test_kotlin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_kotlin"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/test_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_bluetooth"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/test_dagger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_dagger"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/test_rx_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_rx"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>
