<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="24dp"
        android:padding="24dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/bg_corners_10dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:layout_width="64dp"
                android:layout_height="64dp" />
            <TextView
                android:text="@string/app_name"
                android:textSize="24sp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="64dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/username_et"
            android:background="@null"
            android:hint="@string/please_type_username"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <EditText
            android:id="@+id/password_et"
            android:background="@null"
            android:hint="@string/please_type_password"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/login_btn"
            android:background="@color/link"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forget_password_tv"
                android:text="@string/forget_password"
                android:textColor="@color/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/new_user_tv"
                android:text="@string/new_user"
                android:textColor="@color/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <!-- 服务条款 -->
    <LinearLayout
        android:gravity="center"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/server_item_tv"
            android:text="@string/server_item"
            android:textColor="@color/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>